-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.13.1
-
None
-
- Manjaro Linux (Kernel Version 5.3.5)
- Qt 5.13.1
- GCC 9.2.0
-
-
bcbefcd6457adac9d92a410b1f7250ed5b0e8955 (qt/qtbase/5.14)
When creating a QCborValue from tag and data, with the tag beeing a UUID, the resulting value cannot be converted to a QUuid:
QCborValue iv{QUuid::createUuid()};
qDebug() << iv.type() // QCborValue::Type::Uuid
<< iv.tag() // QCborKnownTags::Uuid
<< iv.taggedValue().type() // QCborValue::Type::ByteArray
<< iv.toUuid() // valid uuid, e.g. {92ed11be-9931-4c8e-85fe-a334ca1ce1a2}
<< iv.toVariant() // valid uuid, same as toUuid()
QCborValue tv{iv.tag(), iv.taggedValue()};
qDebug() << tv.type() // QCborValue::Type::Tag
<< tv.tag() // QCborKnownTags::Uuid
<< tv.taggedValue().type() // QCborValue::Type::ByteArray
<< tv.toUuid() // invalid uuid {00000000-0000-0000-0000-000000000000}
<< tv.toVariant() // QByteArray, contains the RFC representation of the uuid
The same problem also exists for QRegularExpression and the RegularExpression tag. It works correctly for QUrl and QDateTime however...
| For Gerrit Dashboard: QTBUG-79196 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 277714,4 | QCborValue: Extend the constructor to also create extended types | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |